--- a/silvercreek/silvercreek.vcxproj.filters
+++ b/silvercreek/silvercreek.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="LiveFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Faces.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="silvercreek.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LiveFrame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Faces.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
